<resources>
    <string name="app_name">Timidity AE</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_quit">Quit</string>
    <string name="soundfont">Choose Soundfonts</string>
    <string name="soundfont2">Manage soundfonts</string>
    <string name="dynex_alert1">Convert to WAV File</string>
    <string name="dynex_alert1_msg">Exports the MIDI/MOD file to WAV.\nNative Midi must be disabled in settings.\nWarning: WAV files are large.</string>
    <string name="warning">Warning</string>
    <string name="dynex_alert2_msg">Overwrite WAV file?</string>
    <string name="cancel">Cancel</string>
    <string name="sett_shf">Show Hidden Files</string>
    <string name="sett_shf_sum">Show files and folders beginning with a .</string>
    <string name="sett_shv">Show Video Files</string>
    <string name="sett_shv_sum">Show and play audio from .mp4 and .3gp files</string>
    <string name="sett_brows4fb">Browse For Default Folder</string>
    <string name="sett_brows4fb_sum">Browse for the file browser\'s home folder</string>
    <string name="sett_fbpath">Manually edit default folder</string>
    <string name="sett_nm">Native Midi</string>
    <string name="sett_nm_sum">Use native android midi playback</string>
    <string name="sett_rate">Audio Rate</string>
    <string name="sett_rate_sum">Audio rate in Hz</string>
    <string name="sett_chan">Audio Channels</string>
    <string name="sett_chan_sum">Number of audio channels</string>
    <string name="sett_buff">Audio Buffer Size</string>
    <string name="sett_buff_sum">Use a higher value if you experience audio skipping (Default 192000)</string>
    <string name="sett_title">Timidity AE Settings</string>
    <string name="sett_ds">Display Settings</string>
    <string name="sett_ds_sum">Display and file browser settings</string>
    <string name="sett_theme">Theme</string>
    <string name="sett_theme_sum">App theme</string>
    <string name="sett_plus">TiMidity++ Settings</string>
    <string name="sett_plus_sum">TiMidity++ settings (may stop playback)</string>
    <string name="sett_dat">Data Settings</string>
    <string name="sett_resf">Reinstall Default Soundfont</string>
    <string name="sett_resf_sum">Reinstall 8Rock11e.sf2 to Timidity AE\'s data folder</string>
    <string name="sett_resf_q">Reinstall Default Soundfont?</string>
    <string name="sett_resf_q_sum">This may take a few minutes.</string>
    <string name="sett_resf_err">Could not extract default soundfont</string>
    <string name="sett_mancfg">Use manual config file</string>
    <string name="sett_mancfg_sum">Use manually created timidity.cfg</string>
    <string name="sett_sil">Preserve Silence</string>
    <string name="sett_sil_sum">Preserve the silence at the beginning of a song instead of skipping it</string>
    <string name="sett_unload">Unload Instruments</string>
    <string name="sett_unload_sum">Unload instruments between songs (recommended)</string>
    <string name="sett_res">Default Resampling Mode</string>
    <string name="sett_res_sum">Algorithm to convert sample rate</string>
    <string name="sett_ddir">Browse For Data Folder</string>
    <string name="sett_ddir_sum">Browse for Timidity AE\'s system folder</string>
    <string name="sett_mandir">Manually Enter Data Folder</string>
    <string name="sett_mandir_sum">Manually enter Timidity AE\'s system folder</string>
    <string name="sett_other">Other Settings</string>
    <string name="sett_kpw">Keep Partial Conversions</string>
    <string name="sett_kpw_sum">Keep partially converted WAV files instead of deleting them</string>
    <string name="sett_defback">Use Default Back Button</string>
    <string name="sett_defback_sum">Use Android\'s default behavior when the back button is pressed</string>
    <string name="sett_compcfg">Compress Configuration Files</string>
    <string name="sett_compcfg_sum">Compresses custom midi configuration files</string>
    <string name="sett_lolrw">Request Lollipop Write Access</string>
    <string name="sett_lolrw_sum">Change the directory that Timidity has access to\nThe ROOT of the SD card must be chosen</string>
    <string name="sett_lolnag">Ask for external sdcard access on startup</string>
    <string name="sett_lolnag_sum">Ask for write access to the external sdcard if not found on startup</string>
    <string name="sett_reshuff">Reshuffle playlist</string>
    <string name="sett_reshuff_sum">Reshuffle the current playlist when switching shuffle modes</string>
    <string name="sett_fancy_plist">Drag and Drop Playlist Reordering</string>
    <string name="sett_fancy_plist_sum">Enable reordering of playlist items via drag and drop</string>
    <string name="intErr1">File not found/unsupported format</string>
    <string name="intErr2">Unsupported protocol; Timidity AE does not support streaming</string>
    <string name="refreshfld">Refresh Folder</string>
    <string name="refreshpls">Refresh Playlist(s)</string>
    <string name="refreshcon">Refresh</string>
    <string name="homefld">Home Folder</string>
    <string name="homecon">Home</string>
    <string name="view">Change View</string>
    <string name="viewcon">View</string>
    <string name="playback">Playback Options</string>
    <string name="playbackcon">Playback</string>
    <string name="add">Add Item</string>
    <string name="addcon">Add</string>
    <string name="tcfg_error">Could not load config. Some file types will be unavailable (%d)</string>
    <string name="mop">TiMidity++ Controls</string>
    <string name="mop_resamp">Resampling Algorithm</string>
    <string name="mop_tempo">Tempo: %2$d BPM (%1$d%%)</string>
    <string name="mop_pitch">Pitch: %s</string>
    <string name="mop_voice">Voices: %1$d/%2$d</string>
    <string name="mop_export">Export to WAV</string>
    <string name="trk_dinst">Default Instrument</string>
    <string name="trk_dvol">Default Volume</string>
    <string name="trk_inst">Instrument</string>
    <string name="trk_vol">Volume</string>
    <string name="trk_form">%1$s Track %2$d. Prog: %3$d Vol: %4$d</string>
    <string name="trk_drum">Drum</string>
    <string name="trk_inst2">Inst</string>
    <string name="trk_form2">Track %d Settings</string>
    <string name="srv_fnf">File not found</string>
    <string name="srv_loading">Already loading</string>
    <string name="srv_unk">Unknown error: %d</string>
    <string name="fb_chfi">Choose File(s)</string>
    <string name="fb_chfo">Choose Folder(s)</string>
    <string name="done">Done</string>
    <string name="fb_fold">This Folder</string>
    <string name="fb_cread">Cannot be read!</string>
    <string name="fb_add">Added</string>
    <string name="plist_save2">Save Playlist As…</string>
    <string name="plist_save">Save</string>
    <string name="plist_mod">Modify Playlist</string>
    <string name="plist_del">Delete</string>
    <string name="plist_del2">Really delete %s?</string>
    <string name="plist_ren">Rename</string>
    <string name="plist_ren2">Rename %s</string>
    <string name="plist_ex">Playlist already exists</string>
    <string name="plist_pnf">Playlist not found</string>
    <string name="plist_modit">Modify Playlist Item</string>
    <string name="plist_addcs">Add current song…</string>
    <string name="plist_adds">Add song…</string>
    <string name="plist_addf">Add folder…</string>
    <string name="plist_addft">Add folder tree…</string>
    <string name="plist_ds">Remove from playlist</string>
    <string name="plist_addcsh">Add current song here…</string>
    <string name="plist_addsh">Add song here…</string>
    <string name="plist_addfh">Add folder here…</string>
    <string name="plist_addfth">Add folder tree here…</string>
    <string name="plist_addto">Add To Playlist</string>
    <string name="plist_curr">Current Playlist</string>
    <string name="plist_crea">Create New Playlist</string>
    <string name="extract">Extracting…</string>
    <string name="extract_sum">Extracting 8Rock11e.sf2…</string>
    <string name="extract_def">To use 8Rock11e.sf2, please re-add it to the config via the \'Choose Soundfonts\' button above</string>
    <string name="invalidbuff">Invalid buffer size, reverting to minimum</string>
    <string name="invalidfold">Invalid folder</string>
    <string name="sf_man">Manage Soundfonts</string>
    <string name="sf_rem">Remove Soundfont</string>
    <string name="sf_rem2">Remove</string>
    <string name="sf_com">Really remove %s from cfg?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="helpt">Timidity AE Help</string>
    <string name="helps">SoX Help</string>
    <string name="thelper">Frequently Asked Questions\n\n

	    Q: How do I export to a WAV file?\n
	    A: Long press your file in the file browser or press the export button in the TiMidity++ Controls dialog box.\n\n

	    Q: Why is Timidity AE Skipping?\n
	    A: Interpreting MIDI files can be CPU intensive. Try increasing the buffer size. If that fails, try to export the problematic MIDI file as WAV.\n
	    If you experience skipping only when your device is asleep, your device may be underclocking in an attempt to save power. Timidity AE tries to prevent this, but some devices don\'t respond. If you are rooted, try increasing the minimum CPU speed.\n\n

	    Q: Why wont my MOD file play?\n
	    A: Certain MOD files are not compatible with TiMidity++.\n\n

	    Q: How do I add/change soundfonts?\n
	    A: Enter \"TiMidity++ Settings\" from the settings menu, click choose soundfonts, and add, remove, enable, or disable your soundfonts from there.\n\n

	    Q: My new soundfont configuration has not been applied!\n
	    A: The app must be completely exited before new the new soundfont configuration will be applied.\n\n

	    Q: Can I still use patch files?\n
	    A: Yes, but check the \"Use manual config file\" option before replacing timidity.cfg. Note that only absolute file paths have been proven to work (the folder command is untested)\n\n

	    Q: My manually edited timidity.cfg disappeared!\n
	    A: It has likely been renamed to timidity.cfg.manualTimidityCfg.*. Check the \"Use manual config file\" option before renaming it back.\n\n

	    Q: How can I change the instruments/pitch/tempo of a song while it is playing?\n
	    A: The buttons in the action bar will allow you to modify these settings. Note that the song must be a NON XG midi or module file for the extra options to work, and tempo cannot be set to a precise BPM because it is based on a ratio.\n\n

	    Q: How do I loop playlists?\n
	    A: Press the upper left button of the player to switch loop modes. The straight arrow icon indicates that the playlist will stop once it has finished. The double arrow icon indicates the playlist will loop. The single arrow icon indicates that the current song will loop.\n\n

	    Q: How do I shuffle playlists?\n
	    A: Press the upper right button of the player to toggle shuffle mode.</string>
    <string name="sop_sp">Speed Change (factor)</string>
    <string name="sop_tp">Tempo Change (factor)</string>
    <string name="sop_pc">Pitch Change (cents)</string>
    <string name="sop_cd">Channel Delay (L, R in seconds)</string>
    <string name="sop_equiv_title">Equivalent SoX Command:</string>
    <string name="sop_add_title">Additional SoX Effects:</string>
    <string name="sett_def_dir">/sdcard/TimidityAE/</string>
    <string name="sett_vol_sum">Master Timidity Amplification</string>
    <string name="sett_vol">Amplification</string>
</resources>