<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/sett_plus"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="manualConfig"
            android:summary="@string/sett_mancfg_sum"
            android:title="@string/sett_mancfg"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="sfConfig"
            android:summary="@string/soundfont2"
            android:title="@string/soundfont"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="tplusSilKey"
            android:summary="@string/sett_sil_sum"
            android:title="@string/sett_sil"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="tplusUnload"
            android:summary="@string/sett_unload_sum"
            android:title="@string/sett_unload"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/resamp_items"
            android:entryValues="@array/background_resamp_items"
            android:key="tplusResamp"
            android:summary="@string/sett_res_sum"
            android:title="@string/sett_res"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/select_channel_items"
            android:entryValues="@array/background_channel_items"
            android:key="sdlChanValue"
            android:summary="@string/sett_chan_sum"
            android:title="@string/sett_chan"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="tplusRate"
            android:summary="@string/sett_rate_sum"
            android:title="@string/sett_rate"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="70"
            android:key="tplusVol"
            android:maxLines="1"
            android:summary="@string/sett_vol_sum"
            android:title="@string/sett_vol"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="192000"
            android:key="tplusBuff"
            android:maxLines="1"
            android:summary="@string/sett_buff_sum"
            android:title="@string/sett_buff"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/select_verbosity_items"
            android:entryValues="@array/background_verbosity_items"
            android:key="timidityVerbosity"
            android:summary="TiMidity++ command line output"
            android:title="Verbosity"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sett_dat"
        app:iconSpaceReserved="false">

        <Preference
            android:key="reSF"
            android:summary="@string/sett_resf_sum"
            android:title="@string/sett_resf"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="defData"
            android:summary="@string/sett_ddir_sum"
            android:title="@string/sett_ddir"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="@string/sett_def_dir"
            android:key="dataDir"
            android:maxLines="1"
            android:summary="@string/sett_mandir_sum"
            android:title="@string/sett_mandir"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
