<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp">

        <CheckBox
            android:id="@+id/soxSpeedChk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sop_sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <!-- Suggested speed range: 0.05 to 20x -->
            <SeekBar
                android:id="@+id/speedSeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:max="29"
                android:progress="11" />

            <EditText
                android:id="@+id/speedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="0.5"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="1.0" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/soxTempoChk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sop_tp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <!-- Suggested tempo range: 0.1 to 10x -->
            <SeekBar
                android:id="@+id/tempoSeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:max="18"
                android:progress="9" />

            <EditText
                android:id="@+id/tempoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="0.5"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="1.0" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/soxPitchChk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sop_pc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <!-- Suggested pitch range: -500 to 500 -->
            <SeekBar
                android:id="@+id/pitchSeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:max="10"
                android:progress="5" />

            <EditText
                android:id="@+id/pitchValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="100"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:text="0" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/soxDelayChk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sop_cd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <!-- Delay should be greater than zero -->
            <EditText
                android:id="@+id/delayValueL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="100"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="0" />

            <EditText
                android:id="@+id/delayValueR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="100"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:text="0" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sop_equiv_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/equivSoxCmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="(empty)"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sop_add_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/custSoxCmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="remix 1,2i 1,2i; delay 0.5"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>
</ScrollView>
